Fixed the parallax scrolling of header and join our milkround text. Using the milkbottle image as a background css element with size set to cover

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar-fixed-top">
         <div class="container">
-            <a href="index.html"> <img class="sitelogo" src="../Modern Milkman Copy/images/homepage/header logo.png" style="max-width:200px;"></a>
+            <a href="index.html"> <img class="sitelogo" src="../Modern-Grocer/images/homepage/header logo.png" style="max-width:200px;"></a>
             <div class="navlinkscontainer">
                 <a class="navlinks" href="productpage.html">Our Products</a>
                 <a class="navlinks" href="howitworks.html">How it works</a>
@@ -34,7 +34,6 @@
                     <h2>Join Our Milkround</h2>
                     <p>Find out if we deliver to your neighbourhood</p>
                 </div>
-                <img class="milkround-image" src="https://themodernmilkman.co.uk/img/images/new-home-ban-test.jpg">
             </div>
             <section class="bottles-usage">
                 <img src="images/homepage/plastic-bottle.png" style="max-width: 70px;">
