added a few more sections and removed some unneccesary CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="navbar-fixed-top">
         <div class="container">
-            <a href="index.html"> <img class="sitelogo" src="../Modern-Grocer/images/homepage/header logo.png" style="max-width:200px;"></a>
+            <a href="index.html"> <img class="sitelogo" src="images/homepage/header logo.png" style="max-width:200px;"></a>
             <div class="navlinkscontainer">
                 <a class="navlinks" href="productpage.html">Our Products</a>
                 <a class="navlinks" href="howitworks.html">How it works</a>
@@ -28,24 +28,43 @@
             </div>
         </div>
     </div>
-        <div class="content">
-            <div class="milkround-banner-section">
-                <div class="milkround-text-container">
-                    <h2>Join Our Milkround</h2>
-                    <p>Find out if we deliver to your neighbourhood</p>
+    <div class="content">
+        <div class="milkround-banner-section">
+            <div class="milkround-text-container">
+                <h2>Join Our Milkround</h2>
+                 <p>Find out if we deliver to your neighbourhood</p>
+            </div>
+        </div>
+        <section class="bottles-usage">
+             <img src="images/homepage/plastic-bottle.png" style="max-width: 70px;">
+             <h3>32,692,832</h3>
+             <p>Plastic Bottles Saved and Counting</p>
+        </section>
+        <section class="bin-usage">
+             <h3 style="color: #7ac9f2;">77,977</h3>
+             <p> Wheelie bins of plastic saved from landfill</p>
+             <img src="images/homepage/wheelie-bins.png" style="max-width: 70px;">
+        </section>
+        <section class="why-us">
+            <h2 style="padding: 20px; font-size: 2.5em;">So why choose us?</h2>
+            <div class="info-blocks">
+                <div class="info1">
+                    <img src="images/homepage/milk_bottle.png" style=max-width:50px; alt="milk bottle image">
+                    <h3>Our range is plastic free</h3>
+                    <p>Order farm-fresh groceries like milk, juice, eggs, butter, bread, fruit and vegetables in plastic free packaging and returnable glass bottles.</p>
+                </div>
+                <div class="info2">
+                    <img src="images/homepage/how_it_online.png" style=max-width:70px; alt="phone image">
+                    <h3>Joining is easy</h3>
+                    <p>Join on our website or app for regular doorstep deliveries and collections, up to three times a week, with flexible ordering and no commitment.</p>
+                </div>
+                <div class="info3">
+                    <img src="images/homepage/how_cal.png" style=max-width:70px; alt="calendar image">
+                    <h3>Order by 8pm for next-day delivery</h3>
+                    <p>Once you've joined our milkround, you can add to your repeat order or add one time orders up to 8pm - for delivery early the next morning.</p>
                 </div>
             </div>
-            <section class="bottles-usage">
-                <img src="images/homepage/plastic-bottle.png" style="max-width: 70px;">
-                <h3>32,692,832</h3>
-                <p>Plastic Bottles Saved and Counting</p>
-            </section>
-            <section class="bin-usage">
-                <h3 style="color: #7ac9f2;">77,977</h3>
-                <p> Wheelie bins of plastic saved from landfill</p>
-                <img src="images/homepage/wheelie-bins.png" style="max-width: 70px;">
-            </section>
-            
-        </div>
+        </section>
+    </div>
 </body>
 </html>
