--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
     </style> 
-
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="navbar-fixed-top">
         <div class="container">
             <a href="index.html"> <img class="sitelogo" src="images/homepage/header logo.png" style="max-width:200px;"></a>
-            <div class="navlinkscontainer">
+
+            <button class="mobile-nav-toggle" aria-controls="navlinkscontainer" aria-expanded="false">
+                <span class="sr-only">Menu</span></button>
+
+            <div class="navlinkscontainer" data-visible="false">
                 <a class="navlinks" href="productpage.html">Our Products</a>
                 <a class="navlinks" href="howitworks.html">How it works</a>
                 <a class="navlinks" href="suppliers.html">Our suppliers</a>
@@ -64,6 +68,12 @@
                     <p>Once you've joined our milkround, you can add to your repeat order or add one time orders up to 8pm - for delivery early the next morning.</p>
                 </div>
             </div>
+        </section>
+        <section class="trustpilot-review-section">
+            <div class="trustpilot-box">
+                
+            </div>
+        </section>
         </section>
     </div>
 </body>
